# myknn

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  MANIFEST.in  Makefile  NAMESPACE  NEWS  README.md  pyproject.toml  setup.py
.devel/: tinytest.R
.devel/cpptest/: test_airroute.cpp  test_kdtree.c  test_tcas.cpp  test_tcas_brute.cpp
.devel/ctest/: test_kdtree.c
.devel/pytest/: test_kdtree.py
.devel/testdata/: waw_lhr_flight_meta.txt  waw_lhr_track.csv
.devel/tinytest/: test_airroute.R  test_kdtree.R  test_tcas.R
.github/workflows/: ctest.yml  pages.yml  py.yml  r.yml
R/: AirRoute-package.R  RcppExports.R  kdtree.R  myknn-package.R
airroute/: __init__.py
docs/: _config.yml  benchmark.md  documentation.md  index.md
docs/_includes/: pages_list.html  site-nav.html
man/: AirRoute-package.Rd  cross_track_route_km.Rd  cross_track_segment_km.Rd  destination_point.Rd  dist_haversine_km.Rd  initial_bearing_deg.Rd  kdtree_build.Rd  kdtree_query.Rd  kdtree_query_radius.Rd  myknn-package.Rd  points_within_radius_km_bruteforce.Rd  points_within_radius_km_kdtree.Rd  route_cumulative_length_km.Rd  route_length_km.Rd  track_cross_track_km.Rd
myknn/: __init__.py
src/: Makevars  RcppAirRoute.cpp  RcppExports.cpp  airroute.cpp  airroute.h  kdtree.c  kdtree.h  kdtree2d.cpp  kdtree2d.h  kdtree_r.c  py_kdtree.c  py_kdtree.pyx  tcas.cpp  tcas.h
