[build-system]
requires = [
    "Cython",
    "numpy>=1.20",
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "myknn"
version = "0.0.4"
description = "k-d tree for k-nearest neighbour search with a C core and Cython bindings"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
    { name = "Bartłomiej Domanowski", email = "01187317@pw.edu.pl" },
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "Cython",
    "scikit-learn>=1.0",
]

[project.urls]
Homepage = "https://bartekdomanowski.github.io/myknn/"
Repository = "https://github.com/BartekDomanowski/myknn"
Issues = "https://github.com/BartekDomanowski/myknn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["myknn*"]
